--- a/work.html
+++ b/work.html
@@ -128,7 +128,7 @@
                     </div><!--My Wardrobe-->
                     <div class="col-md-4 text-center animate-box">
                         <a class="work" href="Fortune_Teller_detail.html">
-                            <div class="work-grid" style="background-image:url(images/WardrobeMVC.jpg);">
+                            <div class="work-grid" style="background-image:url(images/FortuneTellerMainPage.jpg);">
                                 <div class="inner">
                                     <div class="desc">
                                         <h3>Fortune Teller</h3>
