--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
                                 <div class="inner">
                                     <div class="desc">
                                         <h3>Fortune Teller</h3>
-                                        <span class="cat">MVC Web App</span>
+                                        <span class="cat">Console App</span>
                                     </div>
                                 </div>
                             </div>
