update for career day

--- a/CitizenConnect_detail.html
+++ b/CitizenConnect_detail.html
@@ -96,45 +96,45 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
-					<h2>My Virtual Pet</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+					<h2>Citizen Connect</h2>
+					<p>Citizen Connect is a resource for residents of Cleveland to connect with their Cleveland Council Ward representative. It provides a lookup of their ward and council person with contact information. There are also options to suggest or join community projects and report potholes and streetlights that are out to their Councilperson.</p>
 					
 					<div class="role">
 						<h3>Skills Used</h3>
 						<ul>
 							<li>C#</li>
-							<li>Object Oriented Programming(OOP)</li>
 						</ul>
 					</div>
 
-					<p><a href="https://github.com/ChristopherMBetteley/VirtualPet.git" class="btn btn-primary">Visit GitHub Page</a></p>
+					<p><a href="https://github.com/ChristopherMBetteley/FortuneTeller.git" class="btn btn-primary">Visit GitHub Page</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p class="animate-box"><img src="images/MyVirtualPet.jpg" class="img-responsive" alt="My Virtual Pet gameplay screen"></p>
-					<p class="animate-box"><img src="images/MyVirtualPetScores.jpg" class="img-responsive" alt="My Virtual Pet high scores screen"></p>
+					<p class="animate-box"><img src="images/CitizenConnect_Home.png" class="img-responsive" alt="CitizenConnect home page"></p>
+					<p class="animate-box"><img src="images/CitizenConnect_Login.png" class="img-responsive" alt="CitizenConnect login page"></p>
 
-					<div class="testimony animate-box">
+					<!--<div class="testimony animate-box">
 						<blockquote>
-							<p>&ldquo;The program is incredibly fun and creative. The student took a lot of liberties to make user experience more interesting, and they all paid off. 
-                            Several stretch tasks are successfully accomplished. The user experience is fantastic. The use of comments makes the code easy to read and well organized. Fantastic work!&rdquo;</p>
+							<p>&ldquo;The project meets the requirements of the assignment. The assignment also features some additional 
+                            code work that we have not yet covered in the boot-camp, but that makes the program itself more effective. 
+                            Organizational preferences are clear in the code. The stretch task is successfully accomplished. Fantastic work!&rdquo;</p>
 							<p class="person"><cite>&mdash; Daniel Vivacqua </cite> Lead Instructor</p>
 						</blockquote>
-					</div>
-					<p class="animate-box"><img src="images/MyVirtualPetRodent.jpg" class="img-responsive" alt="My virtual Pet character and pet creation screen"></p>
-					<p class="animate-box"><img src="images/MyVirtualPetFront.jpg" class="img-responsive" alt="My virtual Pet main paige"></p>
+					</div>-->
+					<p class="animate-box"><img src="images/CitizenConnect_Reports.png" class="img-responsive" alt="CitizenConnect reports page"></p>
+					<p class="animate-box"><img src="images/CitizenConnect_Resources.png"  class="img-responsive" alt="CitizenConnect resource page"></p>
 				
 
 					<div class="row row-pt-md portfolio-navigation">
 						<div class="col-xs-4 text-left">
-							<a href="work.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
+							<a href="Wardrobe_detail.html" class="btn btn-primary btn-outline"><i class="icon-chevron-left"></i> Prev </a>
 						</div>
 						<div class="col-xs-4 text-center">
 							<a href="work.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
 						</div>
 						<div class="col-xs-4 text-right">
-							<a href="Wardrobe_detail.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+							<a href="work.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
 						</div>
 					</div>
 				</div>
