--- a/Virtual_Pet_detail.html
+++ b/Virtual_Pet_detail.html
@@ -97,7 +97,7 @@
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>My Virtual Pet</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+					<p>My Virtual Pet is a retro-looking app sure to get the nostalgia burning for all those who cared for a virtual pet back in the 1990s when they were at the height of their popularity. Just as with the keychain-sized pets of the 90s, users now will feed, clean, play with and generally look after their pets to ensure they grow up to be healthy and happy.</p>
 					
 					<div class="role">
 						<h3>Skills Used</h3>
