--- a/Wardrobe_detail.html
+++ b/Wardrobe_detail.html
@@ -137,7 +137,7 @@
 							<a href="work.html" class="btn btn-primary btn-outline"><i class="icon-grid2"></i> View All</a>
 						</div>
 						<div class="col-xs-4 text-right">
-							<a href="Fortune_Teller_detail.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
+							<a href="CitizenConnect_detail.html" class="btn btn-primary btn-outline">Next <i class="icon-chevron-right"></i></a>
 						</div>
 					</div>
 				</div>
