--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 					</a>
 				</div><!--My Wardrobe-->
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="Fortune_Teller_detail.html">
-						<div class="work-grid" style="background-image:url(images/FortuneTellerMainPage.jpg);">
+					<a class="work" href="CitizenConnect_detail.html">
+						<div class="work-grid" style="background-image:url(images/CitizenConnect_Index.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Fortune Teller</h3>
+									<h3>Citizen Connect</h3>
 									<span class="cat">MVC Web App</span>
 								</div>
 							</div>
@@ -228,8 +228,8 @@
 						<div class="desc animate-box">
 							<span>Software Apprentice &amp; Programmer</span>
 							<h3>Christopher M. Betteley</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="about.html" class="btn btn-primary btn-outline">Learn More</a></p>
+                            <p>Christopher was born and currently lives in the Cleveland area with his wife, two dogs and four cats.  After years in sales and service he made the switch to Information Technologies and is currently a Software Engineering Apprentice at We Can {Code} IT. </p>
+                            <p>Outside of software and programming Christopher enjoys hosting tabletop gameing nights with his freinds, taking his dogs to the park, and speding time with his wife.</p>							<p><a href="about.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-facebook"></i></a></li>
 								<li><a href="#"><i class="icon-twitter"></i></a></li>
