--- a/work.html
+++ b/work.html
@@ -127,12 +127,12 @@
                         </a>
                     </div><!--My Wardrobe-->
                     <div class="col-md-4 text-center animate-box">
-                        <a class="work" href="Fortune_Teller_detail.html">
-                            <div class="work-grid" style="background-image:url(images/FortuneTellerMainPage.jpg);">
+                        <a class="work" href="CitizenConnect_detail.html">
+                            <div class="work-grid" style="background-image:url(images/CitizenConnect_Index.png);">
                                 <div class="inner">
                                     <div class="desc">
-                                        <h3>Fortune Teller</h3>
-                                        <span class="cat">Console App</span>
+                                        <h3>CitizenConnect</h3>
+                                        <span class="cat">MVC Web App</span>
                                     </div>
                                 </div>
                             </div>
